<resources>
    <string name="app_name">SportsNow</string>
    <string name="login">Iniciar sesión</string>
    <string name="user_register">Sign up user</string>
    <string name="fecha">Date</string>
    <string name="evento">Event</string>
    <string name="organizador">Organizer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>
    <string name="hint_email_login">example@mail.com</string>
    <string name="name_user">Name</string>
    <string name="hint_name_user_register">Enter a your name</string>
    <string name="first_surname">First Surname</string>
    <string name="hint_first_surname">Enter your first surname</string>
    <string name="second_surname">Second surname</string>
    <string name="hint_second_surname">Enter your second surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_password">Must have special characters, capital letters and numbers</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="birthdate">Birthdate</string>
    <string name="hint_birthdate">Enter your date of birth</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="user_details">User Details</string>
    <string name="hint_username">Enter a valid username</string>
    <string name="verify_user">Verifiy account</string>
    <string name="new_event">New event</string>
    <string name="event_name">Event name</string>
    <string name="event_start_date">Start date</string>
    <string name="event_start_time">Start time</string>
    <string name="event_end_date">End date</string>
    <string name="time_to_time">to</string>
    <string name="event_end_time">End time</string>
    <string name="event_city">"City "</string>
    <string name="event_address">Address</string>
    <string name="event_description">Event description</string>
    <string name="sponsors_optional">Sponsors (optional)</string>
    <string name="event_type">Type of event</string>
    <string name="social_event">Social event</string>
    <string name="charitable_cause">Charitable cause</string>
    <string name="competition">Competition</string>
    <string name="private_event">Private</string>
    <string name="user">User</string>
    <string name="next">Next</string>
    <string name="activity_type">Type of activity</string>
    <string name="hint_event_name">Enter the name for the event</string>
    <string name="event_duration_time">Duration time</string>
    <string name="hour_minutes">hh:mm</string>
    <string name="hint_event_start_date">Enter the start date for the event</string>
    <string name="hint_event_end_date">Enter the end date for the event</string>
    <string name="hint_event_address">Where is the event going to take place</string>
    <string name="hint_event_desc">Tell us more about the event</string>
    <string name="hint_event_sponsors">Who sponsors the event</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</string>
    <string name="baseball">Baseball</string>
    <string name="soccer">Soccer</string>
    <string name="swimming">Swimming</string>
    <string name="basketball">Basketball</string>
    <string name="number_participants">Number of participants</string>
    <string name="hint_number_participants">1 - 50 participants</string>
    <string name="event_upload_image">Upload an image for a better reference (optional)</string>
    <string name="event_details">Event details</string>
    <string name="participate_event">Participate</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="event_labels">Event labels (event type, type of activity)</string>
    <string name="cancel_inscription_event">Cancel event registration</string>
    <string name="see_forum">See forum</string>
    <string name="hint_message_forum">What\'s on your mind?</string>
    <string name="signout">Sign out</string>

    <string-array name="municipios_array">
        <item>Municipio 1</item>
        <item>Municipio 2</item>
        <item>Municipio 3</item>
    </string-array>

</resources>